Seven new emotions added

--- a/NewEmotions.ipynb
+++ b/NewEmotions.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Taylor For Week #9"
+    "#### Taylor For Week #9\n",
+    "\n",
+    "* 7 New emotions added. MLP: 40% RF: 89%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
