--- a/NewData/notebooks/data_preprocessing.ipynb
+++ b/NewData/notebooks/data_preprocessing.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 2: Preprocess the Data:\n",
+    "Run each cell to:\n",
+    "* Clean the raw dataset (resources/dataset.csv).\n",
+    "* Generate:\n",
+    "    - features_dataset.csv: Extracted features for training the neural network. Saved in the notebooks directory.\n",
+    "    - metadata_dataset.csv: Metadata for future analysis, saved in the same directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -149,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,21 +197,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_25016\\2263674928.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_33976\\2263674928.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  spotify_df['artists'].fillna('Unknown', inplace=True)\n",
-      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_25016\\2263674928.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_33976\\2263674928.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  spotify_df['album_name'].fillna('Unknown', inplace=True)\n",
-      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_25016\\2263674928.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\tpete\\AppData\\Local\\Temp\\ipykernel_33976\\2263674928.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -215,7 +227,7 @@
     "spotify_df['album_name'].fillna('Unknown', inplace=True)\n",
     "spotify_df['track_name'].fillna('Unknown', inplace=True)\n",
     "\n",
-    "# Check again for missing values\n",
+    "# Check again for missing values (should not be any)\n",
     "print(\"\\nMissing values after imputation:\")\n",
     "print(spotify_df.isnull().sum())\n"
    ]
@@ -283,14 +295,14 @@
     "# Add a placeholder for 'predicted_mood'\n",
     "spotify_df['predicted_mood'] = \"Unknown\"\n",
     "\n",
-    "# Save the metadata dataset for testing\n",
+    "# Save the metadata dataset for testing!\n",
     "spotify_df.to_csv('metadata_dataset.csv', index=False)\n",
     "print(\"Metadata dataset saved as 'metadata_dataset.csv'.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -424,18 +436,19 @@
        "4        0.4690          0.000000    0.0829    0.167  119.949  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Peak at the top of what we have for the extracted features\n",
     "features_df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -654,21 +667,15 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Peak at meta data\n",
     "spotify_df.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
