--- a/NewData/notebooks/testing_model.ipynb
+++ b/NewData/notebooks/testing_model.ipynb
@@ -413,6 +413,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Playlist Generation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
